--- a/pom.xml
+++ b/pom.xml
@@ -62,20 +62,20 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-netbeans-swing-plaf</artifactId>
             <!--<scope>provided</scope>-->
             <version>${netbeans.version}</version>
         </dependency>
-        
+
         <!--        <dependency>
             <groupId>com.bulenkov</groupId>
             <artifactId>darcula</artifactId>
             <version>2018.2</version>
         </dependency>-->
-        
+
     </dependencies>
     <repositories>
         <repository>
@@ -139,6 +139,7 @@
                     <homepageUrl>https://timboudreau.com</homepageUrl>
                     <licenseName>Apache 2.0</licenseName>
                     <licenseFile>apache-2-license.txt</licenseFile>
+                    <finalName>visual-library-tabbedcontrol</finalName>
                 </configuration>
             </plugin>
             <plugin>
@@ -156,6 +157,7 @@
                 <version>2.4</version>
                 <configuration>
                     <useDefaultManifestFile>true</useDefaultManifestFile>
+                    <finalName>visual-library-tabbedcontrol</finalName>
                 </configuration>
             </plugin>
             <plugin>
@@ -163,7 +165,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <!-- 
+                    <!--
                         Torture maven into actually displaying test output in
                         real time, rather than forcing the developer to wait
                         until tests have completed.
@@ -179,7 +181,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <licenses>
         <license>
             <name>Apache 2</name>
