--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,11 @@ Copyright (C) 2012-2019 Tim Boudreau
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mastfrog</groupId>
     <artifactId>visual-library-tabbedcontrol-parent</artifactId>
-    <version>0.3.14</version>
+    <version>0.4.0</version>
     <packaging>pom</packaging>
     <name>Visual Library Tabbed Control Parent</name>
     <modules>
         <module>visual-library-tabbedcontrol</module>
-        <module>colors</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -37,13 +36,14 @@ Copyright (C) 2012-2019 Tim Boudreau
         <netbeans.version>RELEASE82</netbeans.version>
         <junit.version>5.6.2</junit.version>
         <darcula.version>2018.2</darcula.version>
+        <mastfrog.version>2.7.1</mastfrog.version>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.mastfrog</groupId>
                 <artifactId>colors</artifactId>
-                <version>${project.version}</version>
+                <version>${mastfrog.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.netbeans.api</groupId>
